# madrona_sameboy

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  plan.md
.beads/: issues.jsonl
.githooks/: pre-commit
docs/: cule_paper.md  determinism.md
history/: experiments.md  learnings.md  plan.md
src/: CMakeLists.txt  compare_cpu_gpu.cpp  consts.hpp  headless.cpp  headless_gpu.cpp  sameboy_core_gpu.cpp  sameboy_gpu_stubs.c  sim.cpp  sim.hpp  types.hpp  viewer.cpp
